--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -3,13 +3,15 @@
     justify-content: space-around;
     align-items: center;
     height: 10vh;
-    background-color: burlywood;
+    background-color: rgb(236, 236, 236);
     .Footer__block {
         display: flex;
         flex-direction: column;
         align-items: center;
         >span {
             padding: 5px;
+            font-size: 14px;
+            font-weight: 600;
         }
     }
 }
