--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -8,13 +8,21 @@
     border: 3px solid white;
     > button {
         width: max-content;
-        margin: 10px 0;
-        border: 1px solid gray;
-        border-radius: 7%;
+        border: 4px solid black;
+        border-radius: 5%;
         height: 30px;
-        padding: 5px 10px;
-        :hover {
-            box-shadow: 3px 3px 3px red;
+        padding: 28px 35px;
+        display: flex;
+        align-items: center;
+        font-size: 16px;
+        text-transform: uppercase;
+        font-weight: 600;
+        cursor: pointer;
+        transition: 0.8s;
+        &:hover {
+            transition: 0.8s;
+            color: white;
+            background: black;
         }
     }
     > span {
@@ -23,8 +31,9 @@
         opacity: 0.5;
     }
     > p {
-        padding: 10px 0;
-        font-weight: 300;
-        font-size: 30px;
+        font-weight: 400;
+        font-size: 35px;
+        line-height: 1.5;
+        margin-top: 20px;
     }
 }
