--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -8,10 +8,23 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        > :first-child {
+            text-transform: uppercase;
+        }
         >span {
             padding: 5px;
-            font-size: 14px;
+            font-size: 15px;
             font-weight: 600;
+            > a {
+                color: green;
+                transition: 0.8s;
+                &:hover {
+                    color: black;
+                    box-shadow: 0 0 5px gray;
+                    font-size: 20px;
+                    transition: 0.8s;
+                }
+            }
         }
     }
 }
