--- a/src/components/welcome/welcome.scss
+++ b/src/components/welcome/welcome.scss
@@ -1,5 +1,5 @@
 .Welcome__wrapper {
-    height: 30vh;
+    min-height: 40vh;
     background: #464545;
     display: flex;
     justify-content: center;
