--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -6,6 +6,7 @@
     height: 30vh;
     justify-content: center;
     border: 3px solid white;
+    color: black;
     > button {
         width: max-content;
         border: 4px solid black;
