--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -4,6 +4,7 @@
     align-items: center;
     height: 10vh;
     background-color: rgb(236, 236, 236);
+    color: black;
     .Footer__block {
         display: flex;
         flex-direction: column;
