--- a/src/components/aboutCompany/aboutCompany.scss
+++ b/src/components/aboutCompany/aboutCompany.scss
@@ -2,7 +2,6 @@
     display: flex; 
     width: 100%;
     white-space: normal;
-    // background: #ffaeae;
     flex-wrap: wrap;
     padding: 10px 0;
     .AboutCompany__wrapper {
@@ -18,8 +17,11 @@
         .AboutCompany__wrapper-content {
             padding: 50px;
             border: 20px solid white;
-            background: rgb(95, 43, 43);
+            background: rgb(49, 58, 97);
             color: white;
+            &:hover {
+                background: rgb(59, 68, 112);
+            }
         }
     }
 }
