--- a/src/components/welcome/welcome.scss
+++ b/src/components/welcome/welcome.scss
@@ -1,17 +1,52 @@
 .Welcome__wrapper {
-    min-height: 40vh;
-    background: #464545;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    padding: 10px 50px;
+  min-height: 50vh;
+  // background: linear-gradient(0deg, rgb(243, 243, 243) 55%, rgb(0, 0, 0) 100%);
+  background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(98,10,67,1) 100%);
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  padding: 10px 50px;
+  color: white;
+  position: relative;
+  > span {
+    font-size: 28px;
+  }
+  > p {
+    font-size: 35px;
+    font-weight: 600;
+    padding-bottom: 50px;
+  }
+  // https://cssgradient.io/
+  > button {
+    opacity: 0;
+    position: absolute;
+    background: linear-gradient(0deg, rgb(108, 179, 120) 0%, rgb(0, 0, 0) 100%);
+    padding: 17px 45px;
+    font-size: 12px;
+    border: 4px solid white;
+    text-transform: uppercase;
+    font-weight: 600;
+    background: none;
     color: white;
-    >span {
-        font-size: 28px;
+    border-radius: 2%;
+    top: 50%;
+    transition: all 0.8s;
+    transform: translateY(45px);
+    outline: none;
+  }
+  &:hover {
+    transition: all 0.8s ease;
+    color: white;
+    button {
+      // transition: all 0.8s;
+      opacity: 1;
+      width: max-content;
+      transform: translateY(110px);
+      cursor: pointer;
+      outline: none;
+      &:hover {
+        background: black;
+      }
     }
-    >p {
-        font-size: 35px;
-        font-weight: 600;
-        padding-bottom: 50px;
-    }
+  }
 }
