--- a/src/App.scss
+++ b/src/App.scss
@@ -17,7 +17,7 @@ body {
 body {
   margin: 0;
   --color-text: #fff;
-  --color-bg: #fff;
+  --color-bg: rgb(255, 255, 255);
   --color-link: #ffffff;
   --color-link-hover: #6b6b6b;
   color: var(--color-text);
@@ -75,8 +75,8 @@ a {
   text-decoration: none;
   color: var(--color-link);
   outline: none;
-    &:hover,
-    &:focus {
+  &:hover,
+  &:focus {
     color: var(--color-link-hover);
     outline: none;
   }
@@ -153,7 +153,7 @@ a {
         height: 25px;
         margin-right: 20px;
       }
-      .Header__will-you{
+      .Header__will-you {
         font-size: 20px;
         &:hover {
           color: #6b6b6b;
