refactoring + footer + header

--- a/src/App.scss
+++ b/src/App.scss
@@ -196,3 +196,10 @@ a {
     justify-content: center;
   }
 }
+
+.App {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
