--- a/src/components/contact-page/contact-page.scss
+++ b/src/components/contact-page/contact-page.scss
@@ -5,6 +5,7 @@
   min-height: 80vh;
   font-weight: 500;
   font-size: 16px;
+  margin-top: 15vh;
   > .Contact-page__img {
     background-image: url(https://wtt-solutions.com/wp-content/uploads/2018/07/coworking-space-feature-image-1-e1532685924837.jpeg);
     background-repeat: no-repeat;
