--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -39,4 +39,19 @@
         line-height: 1.5;
         margin-top: 20px;
     }
+    > a {
+        border: 3px solid black;
+        width: max-content;
+        padding: 12px 35px;
+        text-transform: uppercase;
+        transition: .4s;
+        color: black;
+        font-weight: 600;
+        &:hover {
+            transition: .4s;
+            border: 3px solid black;
+            background-color: black;
+            color: white;
+        }
+    }
 }
