--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -1,33 +1,37 @@
-.Footer__wrapper {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    height: 15vh;
+.Footer {
     background-color: rgb(236, 236, 236);
-    color: black;
-    padding: 50px 0;
-    margin-top: auto;
     &:hover {
         background: rgb(230, 230, 230);
-    }
+      }
+  .Footer__wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 15vh;
+    color: black;
+    padding: 50px 0;
+    margin: auto;
+    width: 1170px;
+    
     .Footer__block {
-        display: flex;
-        flex-direction: column;
-        > :first-child {
-            text-transform: uppercase;
+      display: flex;
+      flex-direction: column;
+      > :first-child {
+        text-transform: uppercase;
+      }
+      > span {
+        padding: 5px;
+        font-size: 15px;
+        font-weight: 600;
+        > a {
+          color: green;
+          transition: 0.8s;
+          &:hover {
+            color: rgb(165, 47, 47);
+            transition: 0.4s;
+          }
         }
-        >span {
-            padding: 5px;
-            font-size: 15px;
-            font-weight: 600;
-            > a {
-                color: green;
-                transition: 0.8s;
-                &:hover {
-                    color: rgb(165, 47, 47);
-                    transition: 0.4s;
-                }
-            }
-        }
+      }
     }
+  }
 }
