--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -12,7 +12,7 @@
   margin-top: auto;
   position: absolute;
   z-index: 1001;
-  width: 99.1vw;
+  width: 100%;
   color: white;
   font-weight: 600;
   font-size: 16px;
